[gd_scene load_steps=10 format=4 uid="uid://br3uilpbr6mi7"]

[ext_resource type="Script" path="res://assets/scripts/main.gd" id="1_3xe3e"]
[ext_resource type="Texture2D" uid="uid://bj5el5a5u4cs1" path="res://assets/tile/1.png" id="1_xawhf"]
[ext_resource type="Script" path="res://assets/scripts/figure.gd" id="2_hlymr"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_xaeya"]
texture = ExtResource("1_xawhf")
texture_region_size = Vector2i(40, 40)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0

[sub_resource type="TileSet" id="TileSet_btq4d"]
tile_size = Vector2i(40, 40)
sources/0 = SubResource("TileSetAtlasSource_xaeya")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_8vkoa"]
texture = ExtResource("1_xawhf")
texture_region_size = Vector2i(40, 40)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16.617, -20, 16.9706, -20, 16.617, 20, -16.9706, 20)
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 1)
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-15.9099, -20, 16.2635, -20, 15.9099, 20, -15.9099, 20)
2:0/0 = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 1)
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16.617, -20, 15.9099, -20, 15.5564, 20, -16.2635, 20)
3:0/0 = 0
3:0/0/physics_layer_0/linear_velocity = Vector2(0, 1)
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16.2635, -20, 16.2635, -20, 16.2635, 20, -16.2635, 20)

[sub_resource type="TileSet" id="TileSet_hayix"]
tile_size = Vector2i(40, 40)
physics_layer_0/collision_layer = 1
navigation_layer_0/layers = 1
sources/0 = SubResource("TileSetAtlasSource_8vkoa")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_nioil"]
texture = ExtResource("1_xawhf")
texture_region_size = Vector2i(40, 40)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0

[sub_resource type="TileSet" id="TileSet_00et6"]
tile_size = Vector2i(40, 40)
physics_layer_0/collision_layer = 3
physics_layer_0/collision_mask = 3
sources/0 = SubResource("TileSetAtlasSource_nioil")

[node name="Node2D" type="Node2D"]
process_mode = 3
script = ExtResource("1_3xe3e")

[node name="Wall" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAATAA8AAAAAAAAAAAATAA4AAAAAAAAAAAATAA0AAAAAAAAAAAATAAwAAAAAAAAAAAATAAsAAAAAAAAAAAATAAoAAAAAAAAAAAATAAkAAAAAAAAAAAATAAgAAAAAAAAAAAATAAcAAAAAAAAAAAATAAYAAAAAAAAAAAATAAUAAAAAAAAAAAATAAQAAAAAAAAAAAATAAMAAAAAAAAAAAATAAIAAAAAAAAAAAATAAEAAAAAAAAAAAATAAAAAAAAAAAAAAATABAAAAAAAAAAAAAJAAAAAAAAAAAAAAAJAAEAAAAAAAAAAAAJAAIAAAAAAAAAAAAJAAMAAAAAAAAAAAAJAAQAAAAAAAAAAAAJAAUAAAAAAAAAAAAJAAYAAAAAAAAAAAAJAAcAAAAAAAAAAAAJAAgAAAAAAAAAAAAJAAkAAAAAAAAAAAAJAAoAAAAAAAAAAAAJAAsAAAAAAAAAAAAJAAwAAAAAAAAAAAAJAA0AAAAAAAAAAAAJAA4AAAAAAAAAAAAJAA8AAAAAAAAAAAAJABAAAAAAAAAAAAAJAP//AAAAAAAAAAAJAP7/AAAAAAAAAAAJAP3/AAAAAAAAAAATAP//AAAAAAAAAAATAP7/AAAAAAAAAAATAP3/AAAAAAAAAAA=")
tile_set = SubResource("TileSet_btq4d")

[node name="Ground" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAASABAAAAAAAAAAAAARABAAAAAAAAAAAAAQABAAAAAAAAAAAAAPABAAAAAAAAAAAAAOABAAAAAAAAAAAAANABAAAAAAAAAAAAAMABAAAAAAAAAAAAALABAAAAAAAAAAAAAKABAAAAAAAAAAAAA=")
tile_set = SubResource("TileSet_hayix")

[node name="Figure" type="CharacterBody2D" parent="."]
process_mode = 1
position = Vector2(560, 0)
disable_mode = 1
slide_on_ceiling = false
platform_on_leave = 2
script = ExtResource("2_hlymr")

[node name="Smashboy" type="CollisionPolygon2D" parent="Figure"]
visible = false
polygon = PackedVector2Array(-40, -40, -40, 40, 40, 40, 40, -40)
disabled = true

[node name="Tile" type="TileMapLayer" parent="Figure/Smashboy"]
position = Vector2(-600, 0)
tile_map_data = PackedByteArray("AAAPAAAAAAADAAAAAAAOAP//AAADAAAAAAAOAAAAAAADAAAAAAAPAP//AAADAAAAAAA=")
tile_set = SubResource("TileSet_00et6")

[node name="Hero" type="CollisionPolygon2D" parent="Figure"]
visible = false
polygon = PackedVector2Array(-80, -40, -80, 0, 80, 0, 80, -40)
disabled = true

[node name="Tile" type="TileMapLayer" parent="Figure/Hero"]
position = Vector2(-600, 0)
tile_map_data = PackedByteArray("AAANAP//AAABAAAAAAAOAP//AAABAAAAAAAPAP//AAABAAAAAAAQAP//AAABAAAAAAA=")
tile_set = SubResource("TileSet_00et6")

[node name="BlueRicky" type="CollisionPolygon2D" parent="Figure"]
visible = false
polygon = PackedVector2Array(-40, -40, 80, -40, 80, 40, 40, 40, 40, 0, -40, 0)
disabled = true

[node name="Tile" type="TileMapLayer" parent="Figure/BlueRicky"]
position = Vector2(-600, 0)
tile_map_data = PackedByteArray("AAAQAAAAAAACAAAAAAAOAP//AAACAAAAAAAPAP//AAACAAAAAAAQAP//AAACAAAAAAA=")
tile_set = SubResource("TileSet_00et6")

[node name="OrangeRicky" type="CollisionPolygon2D" parent="Figure"]
visible = false
polygon = PackedVector2Array(-40, -40, 80, -40, 80, 0, 0, 0, 0, 40, -40, 40)
disabled = true

[node name="Tile" type="TileMapLayer" parent="Figure/OrangeRicky"]
position = Vector2(-600, 0)
tile_map_data = PackedByteArray("AAAOAAAAAAABAAAAAAAOAP//AAABAAAAAAAPAP//AAABAAAAAAAQAP//AAABAAAAAAA=")
tile_set = SubResource("TileSet_00et6")

[node name="Teewee" type="CollisionPolygon2D" parent="Figure"]
visible = false
polygon = PackedVector2Array(-40, -40, 80, -40, 80, 0, 40, 0, 40, 40, 0, 40, 0, 0, -40, 0)
disabled = true

[node name="Tile" type="TileMapLayer" parent="Figure/Teewee"]
position = Vector2(-600, 0)
tile_map_data = PackedByteArray("AAAPAAAAAAADAAAAAAAOAP//AAADAAAAAAAPAP//AAADAAAAAAAQAP//AAADAAAAAAA=")
tile_set = SubResource("TileSet_00et6")

[node name="ClevelandZ" type="CollisionPolygon2D" parent="Figure"]
visible = false
polygon = PackedVector2Array(-40, -40, 40, -40, 40, 0, 80, 0, 80, 40, 0, 40, 0, 0, -40, 0)
disabled = true

[node name="Tile" type="TileMapLayer" parent="Figure/ClevelandZ"]
position = Vector2(-600, 0)
tile_map_data = PackedByteArray("AAAPAAAAAAACAAAAAAAQAAAAAAACAAAAAAAPAP//AAACAAAAAAAOAP//AAACAAAAAAA=")
tile_set = SubResource("TileSet_00et6")

[node name="RhodeIslandZ" type="CollisionPolygon2D" parent="Figure"]
visible = false
polygon = PackedVector2Array(0, -40, 80, -40, 80, 0, 40, 0, 40, 40, -40, 40, -40, 0, 0, 0)
disabled = true

[node name="Tile" type="TileMapLayer" parent="Figure/RhodeIslandZ"]
position = Vector2(-600, 0)
tile_map_data = PackedByteArray("AAAOAAAAAAABAAAAAAAPAAAAAAABAAAAAAAPAP//AAABAAAAAAAQAP//AAABAAAAAAA=")
tile_set = SubResource("TileSet_00et6")

[node name="LabelGameOver" type="Label" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 422.0
offset_top = 112.0
offset_right = 739.0
offset_bottom = 397.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.882353, 0, 0, 1)
theme_override_font_sizes/font_size = 50
text = "Game Over
press \"Enter\"
for
New Game"
horizontal_alignment = 1

[node name="LabelPaused" type="Label" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 370.0
offset_top = 11.0
offset_right = 786.0
offset_bottom = 296.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.761362, 0.761362, 0, 1)
theme_override_font_sizes/font_size = 50
text = "Pause
press \"Esc\"
or \"P\"
for continue"
horizontal_alignment = 1

[node name="LabelScore" type="Label" parent="."]
offset_right = 351.0
offset_bottom = 55.0
theme_override_font_sizes/font_size = 40
text = "0"
horizontal_alignment = 1
